logging and configuration tweaking for #382